feat :disparition si besoin du  bouton « Créer ... » dans la modale "Ajouter un Match!"
Le bouton « Créer ... » dans la modale "Ajouter un Match!" pour Équipe 1, Équipe 2 et Compétition n’apparaît désormais que si la valeur saisie n’est pas déjà dans la liste des équipes ou compétitions existantes.
Si tu choisis une suggestion existante, le bouton « Créer ... » disparaît immédiatement.
La logique est centralisée dans des méthodes utilitaires pour chaque champ, ce qui garantit un comportement cohérent et sans doublon.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -172,7 +172,7 @@
             *ngFor="let name of filteredTeams1"
             (click)="selectTeam1(name)">{{ name }}</button>
   </div>
-  <div *ngIf="team1Search && filteredTeams1.length === 0" class="mt-1">
+  <div *ngIf="shouldShowCreateTeam1()" class="mt-1">
     <button type="button" class="btn btn-link p-0" (click)="selectTeam1(team1Search)">
       Créer "{{ team1Search }}"
     </button>
@@ -190,7 +190,7 @@
             *ngFor="let name of filteredTeams2"
             (click)="selectTeam2(name)">{{ name }}</button>
   </div>
-  <div *ngIf="team2Search && filteredTeams2.length === 0" class="mt-1">
+  <div *ngIf="shouldShowCreateTeam2()" class="mt-1">
     <button type="button" class="btn btn-link p-0" (click)="selectTeam2(team2Search)">
       Créer "{{ team2Search }}"
     </button>
@@ -218,7 +218,7 @@
                           *ngFor="let name of filteredCompetitions"
                           (click)="selectCompetition(name)">{{ name }}</button>
                 </div>
-                <div *ngIf="competitionSearch && filteredCompetitions.length === 0" class="mt-1">
+                <div *ngIf="shouldShowCreateCompetition()" class="mt-1">
                   <button type="button" class="btn btn-link p-0" (click)="selectCompetition(competitionSearch)">
                     Créer "{{ competitionSearch }}"
                   </button>
