--- a/src/app/modals/edit-players-modal/edit-players-modal.component.html
+++ b/src/app/modals/edit-players-modal/edit-players-modal.component.html
@@ -12,7 +12,7 @@
           <li *ngFor="let player of teamToEdit?.players; let i = index" class="list-group-item d-flex flex-column align-items-start">
             <div class="d-flex w-100 align-items-center justify-content-between">
               <span class="d-flex align-items-center">
-                <i *ngIf="player.type === 'attaquant'" class="fas fa-bolt me-2 type-icon type-icon-clickable" (click)="cyclePlayerType.emit(player)" title="Changer le type (Attaquant)"></i>
+                <i *ngIf="player.type === 'attaquant'" class="fas fa-futbol me-2 type-icon type-icon-clickable" (click)="cyclePlayerType.emit(player)" title="Changer le type (Attaquant)"></i>
                 <i *ngIf="player.type === 'milieu'" class="fas fa-arrows-alt-h me-2 type-icon type-icon-clickable" (click)="cyclePlayerType.emit(player)" title="Changer le type (Milieu)"></i>
                 <i *ngIf="player.type === 'defenseur'" class="fas fa-shield me-2 type-icon type-icon-clickable" (click)="cyclePlayerType.emit(player)" title="Changer le type (Défenseur)"></i>
                 <input class="form-control form-control-sm me-2" style="max-width: 140px; display: inline-block;" [(ngModel)]="player.name" />
@@ -26,7 +26,7 @@
         </ul>
         <div class="input-group">
           <input [(ngModel)]="newPlayerName" class="form-control" placeholder="Ajouter un joueur..." (keyup.enter)="addPlayer.emit()" />
-          <i *ngIf="newPlayerType === 'attaquant'" class="fas fa-bolt type-icon type-icon-clickable" (click)="cycleNewPlayerType.emit()" title="Changer le type (Attaquant)"></i>
+          <i *ngIf="newPlayerType === 'attaquant'" class="fas fa-futbol type-icon type-icon-clickable" (click)="cycleNewPlayerType.emit()" title="Changer le type (Attaquant)"></i>
           <i *ngIf="newPlayerType === 'milieu'" class="fas fa-arrows-alt-h type-icon type-icon-clickable" (click)="cycleNewPlayerType.emit()" title="Changer le type (Milieu)"></i>
           <i *ngIf="newPlayerType === 'defenseur'" class="fas fa-shield type-icon type-icon-clickable" (click)="cycleNewPlayerType.emit()" title="Changer le type (Défenseur)"></i>
           <button class="btn btn-success" (click)="addPlayer.emit()">Ajouter</button>
