--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -108,7 +108,7 @@ h1 {
   background: #fff;
   border-radius: 0.5rem;
   box-shadow: 0 0.5rem 1rem rgba(0,0,0,.15);
-  padding: 1.5rem;
+  padding: 0.2rem;
   outline: 0;
   overflow-y: auto;
   animation: fadeIn .3s;
@@ -184,7 +184,7 @@ h1 {
 
 .duel-equipe .minutes-list.left-team {
   justify-content: flex-end;
-  color: #007bff;
+  /*color: #007bff;*/
 }
 
 .duel-equipe .minutes-list.right-team {
@@ -371,7 +371,7 @@ h1 {
   border-radius: 10px;
   padding: 1rem;
   text-align: center;
-  border: 2px solid #3498db;
+  border: solid #3498db;
   width: 99%;
   max-width: 100%;
   margin: 0 auto;
