--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -73,13 +73,18 @@
               </button>
             </div>
             <div class="modal-body">
-              <div *ngFor="let team of teams" class="form-check">
-                <input type="radio" 
-                       class="form-check-input" 
-                       [value]="team.name" 
-                       [(ngModel)]="selectedTeamFilter" 
-                       id="{{team.name}}">
-                <label class="form-check-label" for="{{team.name}}">{{ team.name }}</label>
+              <div *ngFor="let team of teams" class="form-check d-flex align-items-center justify-content-between">
+                <div>
+                  <input type="radio" 
+                         class="form-check-input" 
+                         [value]="team.name" 
+                         [(ngModel)]="selectedTeamFilter" 
+                         id="{{team.name}}">
+                  <label class="form-check-label" for="{{team.name}}">{{ team.name }}</label>
+                </div>
+                <button class="btn btn-danger btn-sm ms-2" (click)="deleteTeam(team.name)">
+                  <i class="fas fa-trash"></i>
+                </button>
               </div>
               <div class="form-check">
                 <input type="radio" 
