--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
       <span class="domain-text">.be</span>
     </h2>
     <div class="d-flex justify-content-center align-items-center">
-      <p class="lead text-muted mb-0">Enregistrez maintenant tous vos buts!</p>
+      <p class="lead text-muted mb-0">Immortalisez vos matchs!</p>
       <button class="btn btn-link ms-2" (click)="showHelpModal = true">
         <i class="fas fa-question-circle text-warning"></i>
       </button>
@@ -1195,7 +1195,7 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title">Comment utiliser BUUUT.be</h5>
+          <h5 class="modal-title">BUUUT et c'est gratuit!</h5>
           <button type="button" class="btn-close" (click)="showHelpModal = false"></button>
         </div>
         <div class="modal-body">
