--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -36,14 +36,14 @@ h1 {
 
 .btn-primary:hover {
   background-color: #2980b9;
-  transform: translateY(-2px);
+  transform: scale(1.1);
 }
 
 /* Style des matchs */
 .match-details {
   background: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 100%);
   border-radius: 10px;
-  /*padding: 1rem;*/
+  padding: 0.5rem;
   margin-bottom: 1rem;
   transition: all 0.3s ease;
 }
